[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/TowerBlock.gd" type="Script" id=1]
[ext_resource path="res://Art/TowerBlock.png" type="Texture" id=2]
[ext_resource path="res://Art/Ladder.png" type="Texture" id=3]
[ext_resource path="res://Art/Light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 75.4951, 75.2091 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 28.912, 74.7109 )

[node name="TowerBlock" type="StaticBody2D" groups=[ "TowerBlocks" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -74.6901, 75.3976 )
shapes/0/trigger = true
collision/layers = 3
collision/mask = 6
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="Trigger" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -74.6901, 75.3976 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="TowerSprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
offset = Vector2( -156, 0 )
hframes = 5
frame = 4

[node name="Ladder" type="Sprite" parent="TowerSprite"]

transform/pos = Vector2( 0, 0.647079 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -79, 0 )

[node name="LadderArea" type="Area2D" parent="TowerSprite"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -29.4417, 75.06 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 8
collision/mask = 8

[node name="LadderCollider" type="CollisionShape2D" parent="TowerSprite/LadderArea"]

transform/pos = Vector2( -29.4417, 75.06 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Light2D" type="Light2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -60.7741, 14.2998 )
enabled = true
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 0.758545, 0.640625, 1 )
energy = 1.0
mode = 2
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="Sprite" type="Sprite" parent="Light2D"]

transform/scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )
modulate = Color( 0.946119, 0.949219, 0.552475, 1 )

[connection signal="body_enter" from="TowerSprite/LadderArea" to="." method="_on_LadderArea_body_enter"]

[connection signal="body_exit" from="TowerSprite/LadderArea" to="." method="_on_LadderArea_body_exit"]


